enabled snapping thanks to https://github.com/Turistforeningen/Leaflet.draw

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf8">
         <title>Lines to Polys</title>
-        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css">
-        <link rel="stylesheet" href="https://rawgithub.com/Leaflet/Leaflet.draw/v0.2.1/dist/leaflet.draw.css">
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css">        
+        <link rel="stylesheet" href="style/css/leaflet.draw.css">
         <link rel="stylesheet" href="style/css/bootstrap.min.css">
         <link rel="stylesheet" href="style/css/main.css">        
     </head>
@@ -14,7 +14,7 @@
         <script src="https://rawgithub.com/bjornharrtell/jsts/0.13.2/lib/javascript.util.js"></script>
         <script src="https://rawgithub.com/bjornharrtell/jsts/0.13.2/lib/jsts.js"></script>
         <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
-        <script src="https://rawgithub.com/Leaflet/Leaflet.draw/v0.2.1/dist/leaflet.draw.js"></script>
+        <script src="js/leaflet.draw.js"></script>
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
         <script src="style/js/bootstrap.min.js"></script>
